'small fixes for padding and alignment for DigitalClock and Weather components'

--- a/src/Components/Weather/Weather.sass
+++ b/src/Components/Weather/Weather.sass
@@ -40,7 +40,7 @@ h6
     border-radius: 1.5rem
     display: flex
     flex-direction: column
-    align-items: center
+    align-items: start
     justify-content: center
 
 .weather-data
